# django-project-base

./: .env  .eslintrc  .gitignore  .jshintrc  Dockerfile  MANIFEST.in  README.md  README.rst  apps.py  docker-compose.yml  index.html  index.html.2  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  setup.py  social_auth_docs.rst  tox.ini  tsconfig.build.json  tsconfig.json  vite.config.ts  vue.config.js  webpack.config.js
.github/workflows/: Python_tests.yml  black.yml  incremental-coverage-test.yml
django_project_base/: __init__.py  apps.py  constants.py  country_holidays.py  models.py  project_selection.py  project_selection_constants.py  rest_config.py  router.py  serialization.py  settings.py  settings_parser.py  urls.py  utils.py  views.py
django_project_base/account/: __init__.py  apps.py  authentication.py  constants.py  middleware.py  rest.py  router.py  settings.py  urls.py
django_project_base/accounts/: __init__.py  apps.py  constants.py  settings.py
django_project_base/auth/: apps.py  models.py
django_project_base/aws/: ses.py
django_project_base/base/: __init__.py  auth_backends.py  event.py  exceptions.py  fields.py  filter_to_model.py  middleware.py  mixins.py  models.py  permissions.py  queryset_with_cache.py  signals.py  tests.py  viewsets.py
django_project_base/caching/: __init__.py
django_project_base/celery/: __init__.py  apps.py  (+2 more)
django_project_settings/: __init__.py  models.py
docs/: authentication.md  browser-support.md  buildReadMe.txt  fields.md  index.md  installation.md  introduction.md  manual.md  middleware.md  mixins.md  modules.md  notifications.md  open-api.md  performance-profiler.md  project.md  quick-start-guide.md  select-project-middleware.md  settings.md  swagger.md  tags.md  url-variables-middleware.md  user-profile.md
example/: db.sqlite3  db.sqlite3-.sqlite3  login-example.html
examples/: login-example.html
tests/: test_account_register.py  test_auth.py  test_auth_backends.py  test_base.py  test_caching.py  test_celery_notification_task.py  test_impersonate.py  test_maintenance_notifications.py  test_mgmt_cmd_delete_users.py  test_models.py  test_project.py  test_project_settings.py  test_retrieve_holidays.py  test_role.py  test_serialization.py  test_user_profile.py
vue/: api-client.ts  api-config.ts  apiClient.js  apiClient.ts  apiConfig.js  apps.ts  constants.ts  defaultCookieOptions.ts  dpb-app.vue  dpb-components.ts  events.js  events.ts  globals.d.ts  main.spec.ts  main.ts  notifications.ts  profile-search-add-user.ts  projectBaseData.js  projectBaseData.ts  session.js  session.ts  social-integrations.ts  socialIntegrations.ts  store.js  store.ts  titlebar-app-standalone.vue  vuetify-components.ts
(+385 files in other folders)
