[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-project-base"
version = "0.81.7"
description = "Everything revolves around it: users, roles, permissions, tags, etc."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Proprietary" }
authors = [
    { name = "Jure Erznožnik", email = "support@velis.si" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Framework :: Django",
]

dependencies = [
    "django",
    "djangorestframework",
    "dynamicforms>=0.80.17",
    "swapper",
    "django-rest-registration",
    "drf-spectacular>=0.17.2, <0.26.0",
    "django-taggit",
    "svgwrite",
    "django-hijack < 3",
    "pytz",
    "social-auth-app-django",
    "django-permissions-policy",
    "django-csp",
    "requests",
    "boto3",
    "natural",
    "celery>=5.2",
    "pandas",
    "click>=8.1",
]

[project.urls]
Homepage = "https://github.com/velis74/django-project-base"
Repository = "https://github.com/velis74/django-project-base"
"Bug Tracker" = "https://github.com/velis74/django-project-base/issues"

[tool.hatch.build.targets.wheel]
packages = ["django_project_base"]

[tool.hatch.version]
path = "django_project_base/__init__.py"


[tool.ruff]
exclude = ['dockertest',
    'tests', 'docs', 'examples', 'scripts', 'setup.py', 'setup.cfg', 'README.md', 'LICENSE', 'MANIFEST.in',
    'pyproject.toml', 'Pipfile', 'Pipfile.lock', 'ruff.egg-info', 'dist', 'build', '.gitignore', '.git', '.idea',
    '.vscode', '.pytest_cache', '.coverage', '.ruff', '*/migrations/*']
line-length = 120

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E731", "E722"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]

# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
case-sensitive = false
lines-between-types = 1
combine-as-imports = true
order-by-type = false
known-local-folder = []


